aws/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aops-ingress
  namespace: aws-eoc
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /aops
            pathType: Prefix
            backend:
              service:
                name: aops-ui-service
                port:
                  number: 8443
          - path: /aops-rest
            pathType: Prefix
            backend:
              service:
                name: muaops-app-service
                port:
                  number: 9443
